Used incorrect image:tag format

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: python@3.11-slim-bullseye
+      image: python:3.11-slim-bullseye
     services:
       postgres:
         image: postgres
