--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install project deps
-      run: pip install -e .
+      run: pip install -e .[test]
 
     - name: Run Tests
       run: python -m pytest -rA tests
