--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "sqlalchemy",
+    "sqlalchemy==2.0.37",
+    "marshmallow==3.25.1"
 ]
 version = "0.0.1"
 #dynamic = ["version"]
