--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ celerybeat.pid
 env/
 venv/
 venv*/
+/venv*/
 ENV/
 env.bak/
 venv.bak/
@@ -171,3 +172,4 @@ cython_debug/
 .pypirc
 .vscode
 .idea
+.python-version
