--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  run_tests:
+  run_pre_commit:
     runs-on: ubuntu-latest
     container:
       image: python:3.11-slim-bullseye
