--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+        ref: ${{ github.event.pull_request.head.ref }}
 
     - name: Install project deps
       run: |
