--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,12 @@ jobs:
 
     - name: Run Tests
       run: |
-        files_changed=`$(git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | xargs || echo "")`;
+        if [[ ${{ github.event_name == 'pull_request' }} ]]
+        then
+          files_changed=`$(git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | xargs || echo "")`;
+        else
+          files_changed=`$(git merge-base origin/${{ github.event.repository.default_branch }})`;
+        fi
+
         echo "files_changed: $files_changed"
-        echo $files_changed | xargs python3 -m pre_commit run --color=always --files;
+#        echo $files_changed | xargs python3 -m pre_commit run --color=always --files;
