--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,8 @@ jobs:
 
     - name: Run Tests
       run: |
+        echo "$(pwd)"
+        sudo chown -R $USER:$USER ./
         if [[ ${{ github.event_name == 'pull_request' }} ]]
         then
           files_changed=`$(sudo git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | xargs || echo "")`;
