* working on fixing the linting file

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,11 @@ jobs:
   run_pre_commit:
     runs-on: ubuntu-latest
     steps:
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
     - uses: actions/checkout@v4
       with:
         fetch-depth: '0'
