--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,15 +54,15 @@ test_no_db = [
 test = [
     "alchemancer[postgres,test_no_db]"
 ]
-# local dev
-dev = [
-    "pre_commit==4.1.0",
-    "alchemancer[postgres,test_no_db]"
-]
 # example apps
 fastapi = [
     "sqlmodel==0.0.23",
     "fastapi[standard]"
+]
+# local dev
+dev = [
+    "pre_commit==4.1.0",
+    "alchemancer[postgres,test_no_db,fastapi]"
 ]
 
 [tool.setuptools]
@@ -75,7 +75,7 @@ namespaces = false
 
 
 [tool.black]
-line-length = 88
+line-length = 96
 target-version = ['py310', 'py311', 'py312', 'py313']
 
 # disable isort, for IDEs that just default isort to be turned on, e.g. vscode.
