--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "sqlalchemy==2.0.37",
-    "marshmallow==3.25.1"
+    "marshmallow==3.25.1",
+    "typing_extensions ; python_version <= '3.10'"
 ]
 version = "0.0.1"
 #dynamic = ["version"]
