--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ requires-python = ">=3.10"
 dependencies = [
     "sqlalchemy==2.0.37",
     "marshmallow==3.25.1",
-    "typing_extensions ; python_version <= '3.10'"
+    'typing_extensions;python_version<"3.11"'
 ]
 version = "0.0.1"
 #dynamic = ["version"]
