--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "sqlalchemy==2.0.37",
-    "marshmallow==3.25.1"
+    "marshmallow==3.25.1",
+    'typing_extensions;python_version<"3.11"'
 ]
 version = "0.0.1"
 #dynamic = ["version"]
@@ -73,10 +74,13 @@ license-files = ["LICENSE"]
 where = ["alchemancer"]
 namespaces = false
 
-
 [tool.black]
 line-length = 96
 target-version = ['py310', 'py311', 'py312', 'py313']
+
+[tool.ruff]
+line-length = 96
+indent-width = 2
 
 # disable isort, for IDEs that just default isort to be turned on, e.g. vscode.
 [tool.isort]
